--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ a.list1{
   color: blue;
 }
 footer{
-   background-color: black; color:blue;margin:0;
+   background-color: black; color:#0000FF;margin:0;
    text-align: center;height: 50px; padding: 2px;
 }
  /*.first .container2{
@@ -85,7 +85,7 @@ float: right;font-size: 12px;color: #fff;padding-bottom: 7px;
 }
 .E-A2{
 
-  border-radius: 10%;padding-top:15px;
+  border-radius: 15%;padding-top:15px;
   color: black;background-color: #1E90FF;height: 40px;float:right;
   margin: 20px;
 }
